# questiongenerator

./: README.md  pyproject.toml  report.md
src/questiongenerator/: crew.py  main.py
src/questiongenerator/config/: agents.yaml  tasks.yaml
